[fix] search.less: start page search view on mobile devices

--- a/searx/static/themes/simple/src/less/search.less
+++ b/searx/static/themes/simple/src/less/search.less
@@ -229,6 +229,10 @@ html.no-js #clear_search.hide_if_nojs {
     column-gap: @results-tablet-offset;
   }
 
+  #search_view {
+    padding: 0.5rem 0.3rem 0 0.5rem;
+  }
+
   .search_filters {
     margin-top: 0.6rem;
     .ltr-margin-right(0);
